--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "ofertas",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
     "dev": " parcel src/index.html src/styles/styles.scss src/scripts/scripts.js ",
     "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "parcel": "^2.12.0"
+  },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.12.0",
-    "parcel": "^2.12.0",
-    "sass": "^1.77.8",
-    "sharp": "^0.31.3"
+    "@parcel/transformer-sass": "^2.12.0"
   }
 }
