--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": " parcel src/index.html src/styles/styles.scss src/scripts/scripts.js ",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
