--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0"
   },
-  "main": "index.html",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/j0rem0rV2/achadinhos-malume.git"
